# Botler

./: .gitignore  master_botler.py  pyproject.toml
modules/: __init__.py  bot_typing.py  features.py
modules/Database/: db.py
modules/Weather/: __init__.py  teest.py  weather_by_geo.py  wmo_codes.json  wmo_codes_img.json
